# arduino-uno-cmake-library

./: .gitignore  README.md
example_exec/: CMakeLists.txt
example_exec/src/: main.cpp
libarduinouno/: CMakeLists.txt
libarduinouno/cmake/: Arduino-Uno-Toolchain.cmake  pekoevmarduino-config.cmake.in
